<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.amaryllis.tugaspapb5.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_pertambahan"
        android:name="com.amaryllis.tugaspapb5.PertambahanFragment"
        android:label="@string/title_pertambahan"
        tools:layout="@layout/fragment_pertambahan"/>

    <fragment
        android:id="@+id/navigation_pengurangan"
        android:name="com.amaryllis.tugaspapb5.PenguranganFragment"
        android:label="@string/title_pengurangan"
        tools:layout="@layout/fragment_pengurangan" />
</navigation>