<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="55dp"
        android:text="@string/pengurangan"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilsatu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="164dp" />

    <EditText
        android:id="@+id/edt_bilsatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="183dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bildua"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="552dp" />

    <EditText
        android:id="@+id/edt_bildua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="251dp" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="396dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="444dp" />
</androidx.appcompat.widget.LinearLayoutCompat>